buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.0"
    }
}

apply plugin: "org.sonarqube"

allprojects {

    group = 'it.cambi'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenLocal()
        maven {
            url = 'https://repo.maven.apache.org/maven2'
        }
    }
}

configure(subprojects) {

    apply plugin: 'java'

    sourceCompatibility = '1.11'
    targetCompatibility = '1.11'
    dependencies {
        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'

        implementation 'org.slf4j:slf4j-simple:1.7.5'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'

        testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:3.0.0'
        testImplementation 'javax.xml.bind:jaxb-api:2.3.0'
    }

    test {
        useJUnitPlatform()
    }


}
